plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'com.google.devtools.ksp'

}

android {
    compileSdk 34

    defaultConfig {
        applicationId "com.shuoxd.bluetext"
        minSdk 26
        targetSdk 34
        versionCode 2
        versionName "1.240918.1"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
/*    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }*/


    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }


    namespace 'com.shuoxd.bluetext'
    buildFeatures {
        buildConfig true
    }
    kotlinOptions {
        jvmTarget = '17'
    }

    viewBinding {
        enabled = true
    }
      //使用Kotlin的模块需要新增一下配置，解决编译版本不一致的问题//
      compileOptions {
          sourceCompatibility JavaVersion.VERSION_17
          targetCompatibility JavaVersion.VERSION_17
      }
      kotlin {
          jvmToolchain(17)
      }
      kotlinOptions {
          jvmTarget = '17'
      }
      //使用Kotlin的模块需要新增一下配置，解决编译版本不一致的问题//
}

dependencies {

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.core:core-ktx:1.13.1'
    testImplementation 'junit:junit:4.+'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'


    implementation 'me.imid.swipebacklayout.lib:library:1.1.0'
    implementation 'pub.devrel:easypermissions:3.0.0'


    /*BRVAH*/
    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'

    /*banner*/
    implementation 'com.youth.banner:banner:2.1.0'

    implementation 'com.mylhyl:circleDialog:5.2.0'

    /*eventBus*/
    implementation 'org.greenrobot:eventbus:3.2.0'

    implementation 'com.github.maning0303:MNProgressHUD:V1.1.4'

    implementation 'com.github.Jasonchenlijian:FastBle:2.4.0'

}